k8s/base/07-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sudoku-game
  namespace: sudoku-game
  labels:
    app: sudoku-game
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: sudoku-game
